Write gamerule command